Issue #930: Views cleanup, decrease vertical spacing.

--- a/core/modules/views_ui/css/views_ui.admin.theme.css
+++ b/core/modules/views_ui/css/views_ui.admin.theme.css
@@ -782,7 +782,7 @@ td.group-title {
 
 .views-ui-display-tab-bucket .views-display-setting {
   font-size: 14px;
-  padding: .5em;
+  padding: .25em .5em;
 }
 
 .views-ui-display-tab-bucket .views-group-text {
